--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body, html{
 body{
   margin: 0px;
   background-color:#444;
+  background-image: url("lib/giphy.gif");
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
@@ -21,7 +22,21 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
-  border-radius:10px;
+  border-radius:100%;
+  background-color:  red; 
+  height: 50px;
+  width: 50px;
   position:absolute;
 }
+
+.growy-dancer {
+  background-color: green;
+}
+
+.slidy-dancer {
+  height: 33px;
+  width: 33px;
+  background-color: transparent;
+  background-image:  url("lib/nyanCatFav.gif");
+}
+
