--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ body, a:link, a:visited, a:active{
 }
 
 .growy-dancer {
-  background-color: green;
+  background-image: url("lib/nananana.png");
+  background-color: transparent;
+  background-position: -25px -25px;
 }
 
 .slidy-dancer {
