--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,49 @@ body, a:link, a:visited, a:active{
   background-image:  url("lib/nyanCatFav.gif");
 }
 
+/*BLINKY RANDOM OPTIONS*/
+
+
+/*Colours*/
+.blinky-red {
+  background-color: red;
+  border-bottom-color: red;
+}
+
+.blinky-blue {
+  background-color: blue;
+  border-bottom-color: blue;
+}
+
+.blinky-green {
+  background-color: green;
+  border-bottom-color: green;
+}
+
+.blinky-yellow {
+  background-color: yellow;
+  border-bottom-color: yellow;
+}
+
+/*Shapes*/
+.blinky-circle {
+  border-radius: 100%;
+}
+
+.blinky-square {
+  border-radius: 0;
+}
+
+.blinky-triangle {
+  border-radius: 0;
+  background-color: transparent;
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid black;
+}
+
+
+
+
