--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,11 @@ body, a:link, a:visited, a:active{
 }
 
 .growy-dancer {
-  background-image: url("lib/nananana.png");
   background-color: transparent;
-  background-position: -25px -25px;
+}
+
+.growy-dancer img {
+  position: relative;
 }
 
 .slidy-dancer {
@@ -42,8 +44,8 @@ body, a:link, a:visited, a:active{
   background-image:  url("lib/nyanCatFav.gif");
 }
 
-/*BLINKY RANDOM OPTIONS*/
 
+/*BLINKY RANDOM OPTIONS*/
 
 /*Colours*/
 .blinky-red {
@@ -80,9 +82,9 @@ body, a:link, a:visited, a:active{
   background-color: transparent;
   width: 0;
   height: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-bottom: 100px solid black;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 50px solid orange;
 }
 
 
